--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = ""  # Include trailing slash
+baseurl = "/"  # Include trailing slash
 title = "Mothzine"
 theme = "newsroom"
 author = "author"
 copyright = "Copyright © 2020, Mothzine Authors; all rights reserved."
 canonifyurls = true
-paginate = 3
+paginate = 5
 
 # Enable syntax highlighting
 # comment or delete lines 11 ~ 14
